--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 h1{
-    color: rgb(216, 155, 235);
+    color: black;
     
 }
 body{
-    background-color:rgb(241, 225, 228);
+    background-color:whute;
+    background-image:
+    url(https://i.ibb.co/2Pv2CBq/image.jpg)
 }
 li{
-    list-style:none;
-    list-style:none;
+    
 padding:20px 30px 20px 30px;
 
     }
  ul{
-        display:flex;
+       
         }
 .header{
 
