--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 h1{
     color: black;
-    padding:90;
+    font-size: 200pxs;
+    text-align: center ;
+    
     
 }
 body{
@@ -21,13 +23,14 @@ h1{
     background-color: white;
 }
 h2{
-
+    text-align: center
+}
+p{
+    text-align: center 
 }
 li{
-    
-padding:20px 30px 20px 30px;
-
-    }
+     
+}
 
 .header{
 
