--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ p{
 li{
      
 }
+
 .img{
 text-align: center;
 }
@@ -43,4 +44,7 @@ text-align: center;
 .header{
 
     background-color: white;
+}
+.credit{
+    padding-top: 140px;
 }
